# membench

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  build.rs
.claude/: settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/scripts/: setup.sh
.github/workflows/: ci.yml
docs/: ANALYSIS_SUMMARY.md  ARCHITECTURE.md  CAPTURE_TRAIT_DESIGN.md  EBPF_INTEGRATION.md  EBPF_SOCKET_ARCHITECTURE.md  MEMBENCH_CODEBASE_OVERVIEW.md  README.md  SYSTEM_TESTS.md
docs/articles/: BPF from Scratch in Rust.html
docs/plan/: 2025-10-17-membench.md
docs/plans/: 2025-10-17-async-multi-connection-replay.md  2025-10-17-membench.md  2025-10-18-phase1-trait-abstraction.md  2025-10-18-phase2-ebpf-core.md  2025-10-18-phase2-ebpf-socket-capture.md  2025-10-21-replay-statistics.md
ebpf/: Cargo.toml  README.md  programs.bpf  rebuild.sh
ebpf/.cargo/: config.toml
ebpf/src/: programs.rs
scripts/: README.md  demo.sh
src/: lib.rs  main.rs
src/analyze/: main.rs  mod.rs
src/profile/: mod.rs
src/record/: anonymizer.rs  capture.rs  main.rs  mod.rs  parser.rs  stream_reassembler.rs  writer.rs
tests/: anonymizer_tests.rs  connection_stats_tests.rs  e2e_tests.rs  ebpf_feature_test.rs  ebpf_socket_capture_test.rs  memcache_parser_tests.rs  pcap_file_tests.rs  profile_serde_tests.rs  record_capture_tests.rs  record_writer_tests.rs  replay_analyzer_tests.rs  replay_client_tests.rs  replay_generator_tests.rs  replay_integration_test.rs  replay_reader_tests.rs  replay_stats_integration_test.rs  stream_reassembler_tests.rs  system_tests.rs
(+13 files in other folders)
