[package]
name = "membench"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.1"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
siphasher = "0.3"
ctrlc = "3.4"
hdrhistogram = "7.5.4"
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "membench"
path = "src/lib.rs"

[[bin]]
name = "membench"
path = "src/main.rs"
